--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="header">
         <img class="logo" src="https://abdulwaqas17.github.io/Dental-WebPage_Assignment-11/Assists/teeth.jpg" alt="Dental Logo" height="120px">
-        <h1 class="heading">The Dental Hygiene Association</h1>
+        <center><h1 class="heading">The Dental Hygiene Association</h1></center>
     </div>
 
     <div class="nav">
@@ -26,6 +26,7 @@
     <!-- MAIN -->
 
     <div class="main">
+        <div class="background">
         <h1 class="kids">Kids</h1>
         <img src="https://abdulwaqas17.github.io/Dental-WebPage_Assignment-11/Assists/check-up.jpg" alt="" width="400" class="check-up">
         <p class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus asperiores beatae
@@ -66,6 +67,7 @@
         </p>
 
         <hr>
+    </div>
 
         <!-- FOOTER -->
 
